releases/v0.4.6/default_bundle/assets/templates/32-过程-沟通记录与结论回写模板.md
# 沟通记录与结论回写模板
## 1. 使用规则
- 这份文件用于保留完整沟通问答历史，不只记录结论。
- 只有已经确认的新结论，才允许写回正式文件。
- 未确认结论、待定项、纯过程沟通，也要保留在这里，便于后续追溯。
## 2. 当前上下文
- 项目名称：
- 模块/需求名称：
- 当前阶段：
- 对应项目包版本：
- 维护人：
- 最近更新时间：
## 3. Authority Carrier Structured Records
- 当前任务链的 `04-过程文件/00-沟通记录与结论回写.md` 是 `delivery owner mode` 的唯一 authority carrier，`35-过程-总控复核清单.md`、`Required Opening`、`Final User Report` 只允许做 echo，不得反向成为 authority。
- 同一轮 authority append 顺序固定为：`Delivery Owner Record -> Dispatch Snapshot Record -> Partial State Record`。
- `task_chain_epoch` 只允许在 `user_explicit_relock / scope_changed_by_user / exit_reenter` 路径上递增；普通 redispatch 与 partial-state recovery 不得推动 epoch 递增。
- `acceptance_evidence` 只能由 verifier-owned 证据提取生成，且必须携带 `evidence_owner: verifier`；`dispatch_evidence` 只能作为 child self-report。
- `verified_target_files` 是 verifier-owned `acceptance_evidence` 的最小落点清单，`verified_forbidden_regressions` 是 verifier-owned `acceptance_evidence` 的回归阻断清单；`verified_forbidden_regressions` 必须是字符串列表；无阻断项时显式写空列表 `[]`。
- `verified_target_files`、`verified_target_hits`、`verified_closure_evidence` 都必须是 verifier 产出的非空字符串列表；空列表、空字符串或占位值都视为无效验收。
- `acceptance_evidence` 必须绑定到当前任务链里已记录的 `Dispatch Snapshot Record`；不存在孤立 `dispatch_instance_id`，且 `Dispatch Snapshot Record.dispatch_instance_id` 在当前任务链内必须唯一；`reject_wrong_target` 后续 redispatch 必须生成新的 `dispatch_instance_id`。
- 当 `Dispatch Contract Block` materialize `host_window_contract`、`stage_snapshot_contract`、`unlock_contract` 或 `worker_lifecycle_contract` 时，它们是可回填的 dispatch 证据，不是新的 authority carrier；`visible_route_owner` 仍然由总控消费，`return_target` 仍然只代表 business-consumer contract。
- 若 `/读取回执` 已成功 consume，当前 `Delivery Owner Record` 还必须保留 fresh `/总控` replay 所需的 flat retention fields：`latest_consumed_receipt_consumed`、`latest_consumed_receipt_dispatch_instance_id`、`latest_consumed_receipt_task_chain_id`、`latest_consumed_receipt_task_chain_epoch`、`latest_consumed_receipt_child_thread`、`latest_consumed_receipt_current_phase`、`latest_consumed_receipt_return_reason`、`latest_consumed_receipt_recommended_return_target`、`latest_consumed_receipt_recommended_total_control_state`；不得再新开第二 authority carrier。
- `verified_target_hits` 只允许固定命中语法：`markdown_heading:<heading path>`、`yaml_key:<dot.path>`、`json_key:<dot.path>`、`table_row:<section heading>::<row label>`、`literal_anchor:<exact token>`。
- `verified_closure_evidence` 只允许固定闭包语法：`locator_present:<locator>`、`literal_present:<exact token>`、`literal_absent:<exact token>`、`json_equals:<dot.path>=<json literal>`、`yaml_equals:<dot.path>=<scalar literal>`。
- 尖括号占位体（如 `<heading path>`、`<locator>`、`<json literal>`）只是语法说明，不是合法验收值；任何包含这类占位片段的值都视为无效验收；`closure_quantifier` 只允许 `all_of / any_of`，并且必须由 verifier-owned `acceptance_evidence` 判定，不得依赖 child echo。
- 同一 `dispatch_instance_id` 上的 `wrong-target repair rejection` 必须直接 fail-closed，不能被写成已验收；同一 `dispatch_instance_id` 上的 `untrusted partial state` 必须使用 `required_redispatch_action: hold_untrusted_partial_state` 落在当前任务链回写链路中，且在补齐有效回执前不能被验收态覆盖。
- `Partial State Record.required_redispatch_action` 只允许：`redispatch_same_epoch / reject_wrong_target / hold_untrusted_partial_state`。
- 首波 gate-answer 合同要求：若 gate-state 命中 `gate_fail_semantics: same_stage_rework_required` 且 `blocker_policy: non_overridable`，则 `Final Answer` / `acceptance_evidence` 只能接受同阶段补料结论，不得把建议切模块、进入原型或进入深审写成通过态。
- verifier 在本模板中的最小拒收面固定包含 `answer vs gate-state` 一致性；一旦最终回答与 gate-state 冲突，必须 fail-closed。
- 首波 `routing blocker code` 固定为 `project_compliance_prereview_missing / topic_baseline_missing / module_split_confirmation_missing / prd_formalization_missing / prototype_entry_missing`；命中时必须把缺口与回退目标写实，不得只写软挂起或后续再补。
### Delivery Owner Record <task_chain_id>#<task_chain_epoch>
```yaml
schema: total_control.delivery_owner_record.v1
task_chain_id:
task_chain_epoch:
authority_record_version:
scope_level:
scope_path:
当前责任模式:
模式来源:
二次握手结果:
锁存范围:
退出条件:
当前状态:
```
### Dispatch Snapshot Record <dispatch_instance_id>
```yaml
schema: total_control.dispatch_snapshot_record.v1
dispatch_instance_id:
task_chain_id:
task_chain_epoch:
```
### Partial State Record <task_chain_id>#<partial_state_seq>
```yaml
schema: total_control.partial_state_record.v1
dispatch_instance_id:
task_chain_id:
task_chain_epoch:
partial_state_seq:
source_agent:
affected_files:
suspected_mismatch:
required_redispatch_action:
```
## 4. 沟通记录
### 记录 001
- 时间：
- 当前阶段：
- 用户问题：
- AI 回复：
- 是否形成新结论：【是 / 否 / 待确认】
- 抽取结论：
- 结论级别：【项目级 / 需求级 / 模块级 / 纯过程 / 待确认】
- 当前收集层级：【项目级 / 产品级共享资产 / 项目级原型底座 / 模块 PRD / 模块原型 / 页面级例外 / 纯过程】
- 目标真源宿主：
- 是否触发上层升级：【是 / 否 / 待判断】
- 升级目标宿主：
- 建议回写位置：
- 实际回写位置：
- 回写状态：【已回写 / 待回写 / 不适用】
- 仓库归属说明：【工具包本体 / 真实项目产出 / 暂未判定】
### 记录 002
- 时间：
- 当前阶段：
- 用户问题：
- AI 回复：
- 是否形成新结论：【是 / 否 / 待确认】
- 抽取结论：
- 结论级别：【项目级 / 需求级 / 模块级 / 纯过程 / 待确认】
- 当前收集层级：【项目级 / 产品级共享资产 / 项目级原型底座 / 模块 PRD / 模块原型 / 页面级例外 / 纯过程】
- 目标真源宿主：
- 是否触发上层升级：【是 / 否 / 待判断】
- 升级目标宿主：
- 建议回写位置：
- 实际回写位置：
- 回写状态：【已回写 / 待回写 / 不适用】
- 仓库归属说明：【工具包本体 / 真实项目产出 / 暂未判定】
